Name:         blaze-html-haste
Version:      0.7.0.1
Homepage:     http://jaspervdj.be/blaze
Bug-Reports:  http://github.com/jaspervdj/blaze-html/issues
License:      BSD3
License-file: LICENSE
Author:       Jasper Van der Jeugt, Simon Meier
Maintainer:   Jasper Van der Jeugt <m@jaspervdj.be>
Stability:    Experimental
Category:     Text
Synopsis:     A blazingly fast HTML combinator library for Haskell
Description:
  A blazingly fast HTML combinator library for the Haskell
  programming language. The Text.Blaze module is a good
  starting point, as well as this tutorial:
  <http://jaspervdj.be/blaze/tutorial.html>.

Build-type:    Simple
Cabal-version: >= 1.8

Extra-source-files:
  CHANGELOG
  src/Util/Sanitize.hs
  src/Util/GenerateHtmlCombinators.hs

Library
  Hs-source-dirs: src
  Ghc-Options:    -Wall

  Exposed-modules:
    Text.Blaze.Html
    Text.Blaze.Html.Renderer.Pretty
    Text.Blaze.Html.Renderer.String
    Text.Blaze.Html4.FrameSet
    Text.Blaze.Html4.FrameSet.Attributes
    Text.Blaze.Html4.Strict
    Text.Blaze.Html4.Strict.Attributes
    Text.Blaze.Html4.Transitional
    Text.Blaze.Html4.Transitional.Attributes
    Text.Blaze.Html5
    Text.Blaze.Html5.Attributes
    Text.Blaze.XHtml1.FrameSet
    Text.Blaze.XHtml1.FrameSet.Attributes
    Text.Blaze.XHtml1.Strict
    Text.Blaze.XHtml1.Strict.Attributes
    Text.Blaze.XHtml1.Transitional
    Text.Blaze.XHtml1.Transitional.Attributes
    Text.Blaze.XHtml5
    Text.Blaze.XHtml5.Attributes

  Build-depends:
    base                >= 4    && < 5,
    blaze-markup-haste  >= 0.6  && < 0.7
